# home-website

./: README.md  index.html  main.py  pyproject.toml
static/: style.css
templates/: 404.html  about.html  contact.html  index.html  projects.html
