[tool.poetry]
name = "repl_python3_beta_JBYT27"
version = "0.1.0"
description = ""
authors = ["JBloves27 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
REPLAPI = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
